<resources>
    <string name="app_name">GroceryListApp</string>
    <string name="category_header">Category Header</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="submit_item">Submit Item</string>
    <string name="add_item">Add Item</string>
    <string name="add_list">Add List</string>
    <string name="grocery_list_name">Grocery List Name</string>
    <string name="grocery_list_description">Grocery List Description</string>
    <string name="list_name">List Name...</string>
    <string name="list_desc">List Desc...</string>
    <string name="delete_list">Delete List</string>
    <string name="update_list">Update List</string>
    <string name="edit_list_name">Edit List Name...</string>
    <string name="edit_list_desc">Edit List Desc...</string>
    <string name="add_more_item">Add More Item</string>
    <string name="save">Save</string>
    <string name="new_list">New List</string>
    <string name="item">Item</string>
    <string name="grocery_list">Grocery List</string>
    <string name="short_description">Short Description</string>
    <string name="item_category">Item Category</string>
    <string name="submit_list">Submit List</string>
</resources>