<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/xs">

    <LinearLayout
        android:id="@+id/llGroceryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/xs">

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name"/>

        <TextView
            android:id="@+id/tvItemQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs"
            android:text="@string/item_quantity"/>

        <TextView
            android:id="@+id/tvItemCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs"
            android:text="@string/item_category"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>