<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/xs"
    tools:context=".ui.details.DetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="Details"
            app:titleCentered="true"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl"
        android:layout_marginHorizontal="@dimen/xl"
        android:textSize="@dimen/tx_l"
        android:textStyle="bold"
        android:text="@string/list_name"/>

    <TextView
        android:id="@+id/tvListDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xl"
        android:layout_marginHorizontal="@dimen/xl"
        android:textSize="@dimen/tx_l"
        android:text="@string/list_desc"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/xxxxs"
        android:layout_marginVertical="@dimen/l"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/llItemsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbDeleteList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"
            android:layout_marginEnd="@dimen/xl"
            android:text="@string/delete_list"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbUpdateList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_list"/>
    </LinearLayout>

</LinearLayout>